# wasmedge_reqwest_demo

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: examples.yml
src/: https.rs  main.rs
