[package]
name = "wasmedge_reqwest_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest_wasi = { version = "0.11", features = ["wasmedge-tls"] }
tokio_wasi = { version = "1", features = ["rt", "macros", "net", "time"] }

[[bin]]
name = "http"
path = "src/http.rs"

[[bin]]
name = "https"
path = "src/https.rs"
